--- a/Leetspeak.Tests.csproj
+++ b/Leetspeak.Tests.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Triangle\Triangle.csproj" />  
+    <ProjectReference Include="..\Leetspeak\Leetspeak.csproj" />  
   </ItemGroup>
 
 </Project>
